--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,21 +1,33 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    font-family: "Ubuntu";
+    font-size: 60px;
+    background-color: #014E9E;
+}
+
 .table {
     width: 100%;
 }
 
-.table.departs tr:nth-child(2n) {
-    background-color: #014E9E;
-}
-
-.table.departs tr:nth-child(2n+1) {
-    background-color: #03196C;
+table, th, td {
+    border-collapse: collapse;
 }
 
 .table.departs tr:nth-child(2n) {
     background-color: #014E9E;
 }
 
-.table.departs tr:nth-child(2n+1) {
+.table.departs tr:nth-child(2n+1),.departs {
     background-color: #03196C;
+}
+
+.table.arrivees tr:nth-child(2n) {
+    background-color: #14402F;
+}
+
+.table.arrivees tr:nth-child(2n+1),.arrivees {
+    background-color: #2B5B4B;
 }
 
 td:nth-child(1) {
@@ -52,14 +64,42 @@ td:nth-child(3) {
     font-size: 130px;
     font-weight: bold;
     position: absolute;
-    bottom: 0;
+    bottom: 100px;
     right: 0;
     color: #334AD4;
     transform: translate(25%, -100%) rotate(-90deg);
 }
 
+#footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 70px;
+}
+
 #clock {
+    font-family: Ubuntu;
     position: absolute;
     bottom: 0px;
-    right: 0px;
+    right: 20px;
+    padding: 10px 5px;
+    border-radius: 15px 15px 0 0;
+    border: 4px solid white;
+    border-bottom-width: 0;
+    background-color: #030943;
+}
+
+#hours, #minutes, #dot {
+    font-size: 50px;
+    color: white;
+}
+
+#seconds {
+    font-size: 25px;
+    color: #A3623A;
+}
+
+.marquee-text {
+    font-family: Ubuntu;
+    color: white;
 }
