--- a/src/main/resources/templates/coursesView.html
+++ b/src/main/resources/templates/coursesView.html
@@ -3,29 +3,46 @@
 <head>
     <title th:if="${type == 'departs'}" th:text="'Départs de ' + ${gare}" ></title>
     <title th:if="${type == 'arrivees'}" th:text="'Arrivées de ' + ${gare}"></title>
-    <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}" />
+    <link rel="stylesheet" type="text/css" href="../static/css/style.css" th:href="@{/css/style.css}" />
+    <script src="../static/js/jquery-3.3.1.min.js" th:src="@{/js/jquery-3.3.1.min.js}"></script>
     <script src="../static/js/clock.js" th:src="@{/js/clock.js}"></script>
+    <script src="../static/js/marquee.js" th:src="@{/js/marquee.js}"></script>
+
 </head>
 <body onload="startTime()">
 
-<table class="table" th:classappend="${type == 'departs' ? departs : arrivees}">
-    <tr th:each="course : ${courses}">
-        <td><span class="numTrain" th:text="${course.numTrain}"></span></td>
-        <td >
-            <span class="heureDepart" th:if="${type == 'departs'}" th:text="${course.heureDepart}"></span>
-            <span class="heureDepart" th:if="${type == 'arrivees'}" th:text="${course.heureArrivee}"></span>
-        </td>
-        <td>
-            <span class="gareArrive" th:if="${type == 'departs'}" th:text="${course.gareArrive}"></span>
-            <span class="gareArrive" th:if="${type == 'arrivees'}" th:text="${course.gareDepart}"></span>
-        </td>
-    </tr>
-</table>
+<div>
+    <table class="table" th:classappend="${type == 'departs' ? 'departs' : 'arrivees'}">
+        <tr th:each="course : ${courses}">
+            <td><span class="numTrain" th:text="${course.numTrain}"></span></td>
+            <td >
+                <span class="heureDepart" th:if="${type == 'departs'}" th:text="${course.heureDepart}"></span>
+                <span class="heureDepart" th:if="${type == 'arrivees'}" th:text="${course.heureArrivee}"></span>
+            </td>
+            <td>
+                <span class="gareArrive" th:if="${type == 'departs'}" th:text="${course.gareArrivee}"></span>
+                <span class="gareArrive" th:if="${type == 'arrivees'}" th:text="${course.gareDepart}"></span>
+            </td>
+        </tr>
+    </table>
 
-<div id="clock"></div>
+    <span class="depart" th:if="${type == 'departs'}">départs</span>
+    <span class="depart" th:if="${type == 'arrivees'}">arrivées</span>
+</div>
 
-<span class="depart" th:if="${type == 'departs'}">départs</span>
-<span class="depart" th:if="${type == 'arrivees'}">arrivées</span>
+<div id="footer" th:classappend="${type == 'departs' ? 'departs' : 'arrivees'}">
+    <div class='marquee'>
+        <div class='marquee-text'>
+            Clic rabot pas problem oui?
+        </div>
+    </div>
+    <div id="clock">
+        <span id="hours"></span>
+        <span id="dot">:</span>
+        <span id="minutes"></span>
+        <span id="seconds"></span>
+    </div>
+</div>
 
 </body>
 </html>
