--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,8 +2,7 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: "Ubuntu";
-    font-size: 60px;
-    background-color: #014E9E;
+    font-size: 80px;
 }
 
 .table {
@@ -14,7 +13,7 @@ table, th, td {
     border-collapse: collapse;
 }
 
-.table.departs tr:nth-child(2n) {
+.table.departs tr:nth-child(2n),.departsBody {
     background-color: #014E9E;
 }
 
@@ -22,12 +21,12 @@ table, th, td {
     background-color: #03196C;
 }
 
-.table.arrivees tr:nth-child(2n) {
-    background-color: #14402F;
+.table.arrivees tr:nth-child(2n),.arriveesBody {
+    background-color: #2B5B4B;
 }
 
 .table.arrivees tr:nth-child(2n+1),.arrivees {
-    background-color: #2B5B4B;
+    background-color: #14402F;
 }
 
 td:nth-child(1) {
@@ -60,14 +59,21 @@ td:nth-child(3) {
     font-weight: bold;
 }
 
-.depart {
+.departArrivee {
     font-size: 130px;
     font-weight: bold;
     position: absolute;
     bottom: 100px;
     right: 0;
-    color: #334AD4;
     transform: translate(25%, -100%) rotate(-90deg);
+}
+
+.depart {
+    color: #334AD4;
+}
+
+.arrivee {
+    color: #69837A;
 }
 
 #footer {
@@ -87,6 +93,10 @@ td:nth-child(3) {
     border: 4px solid white;
     border-bottom-width: 0;
     background-color: #030943;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 #hours, #minutes, #dot {
@@ -101,5 +111,6 @@ td:nth-child(3) {
 
 .marquee-text {
     font-family: Ubuntu;
+    font-size: 20px;
     color: white;
 }
