--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,8 +1,12 @@
 html, body {
     margin: 0;
     padding: 0;
-    font-family: "Ubuntu";
+    font-family: "Ubuntu", "Arial";
     font-size: 80px;
+}
+
+.content {
+    margin-bottom: 70px;
 }
 
 .table {
@@ -31,6 +35,7 @@ table, th, td {
 
 td:nth-child(1) {
     width: 10%;
+    padding-left: 10px;
 }
 
 td:nth-child(2) {
@@ -81,36 +86,52 @@ td:nth-child(3) {
     bottom: 0;
     width: 100%;
     height: 70px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+
 }
 
 #clock {
-    font-family: Ubuntu;
-    position: absolute;
-    bottom: 0px;
-    right: 20px;
-    padding: 10px 5px;
+    align-content: flex-end;
+    font-family: "Ubuntu", "Arial";
+    /*position: absolute;*/
+    /*bottom: 0px;*/
+    /*right: 20px;*/
+    padding: 5px 10px;
     border-radius: 15px 15px 0 0;
     border: 4px solid white;
     border-bottom-width: 0;
     background-color: #030943;
     height: 100%;
     display: flex;
-    align-items: center;
+    align-items: baseline;
     justify-content: flex-start;
+    margin-right: 30px;
 }
 
 #hours, #minutes, #dot {
-    font-size: 50px;
+    font-size: 60px;
     color: white;
 }
 
 #seconds {
-    font-size: 25px;
+    margin-left: 7px;
+    font-size: 30px;
     color: #A3623A;
 }
 
-.marquee-text {
-    font-family: Ubuntu;
-    font-size: 20px;
+.marquee {
+    overflow: hidden;
+    font-family: "Ubuntu", "Arial";
+    font-size: 50px;
     color: white;
+    display: flex;
+    align-items: center;
+    white-space:nowrap;
+    text-overflow:ellipsis;
+}
+
+.space {
+    padding-right: 600px;
 }
