--- a/src/main/resources/templates/coursesView.html
+++ b/src/main/resources/templates/coursesView.html
@@ -5,13 +5,14 @@
     <title th:if="${type == 'arrivees'}" th:text="'Arrivées de ' + ${gare}"></title>
     <link rel="stylesheet" type="text/css" href="../static/css/style.css" th:href="@{/css/style.css}" />
     <script src="../static/js/jquery-3.3.1.min.js" th:src="@{/js/jquery-3.3.1.min.js}"></script>
+    <script src="../static/js/jquery.marquee.min.js" th:src="@{/js/jquery.marquee.min.js}"></script>
     <script src="../static/js/clock.js" th:src="@{/js/clock.js}"></script>
     <script src="../static/js/marquee.js" th:src="@{/js/marquee.js}"></script>
 
 </head>
 <body onload="startTime()" th:classappend="${type == 'departs' ? 'departsBody' : 'arriveesBody'}">
 
-<div>
+<div class="content" th:fragment="resultsList" id="resultsList">
     <table class="table" th:classappend="${type == 'departs' ? 'departs' : 'arrivees'}">
         <tr th:each="course : ${courses}">
             <td><span class="numTrain" th:text="${course.numTrain}"></span></td>
@@ -32,10 +33,11 @@
 
 <div id="footer" th:classappend="${type == 'departs' ? 'departs' : 'arrivees'}">
     <div class='marquee'>
-        <div class='marquee-text'>
-            Clic rabot pas problem oui?
-        </div>
+        Clic rabot pas problem oui ?<span class="space"></span>
+        Nous nous excusons d'avance pour les retards éventuels.<span class="space"></span>
+        Manger 5 fruits et 5 légumes par jour.<span class="space"></span>
     </div>
+    <button> AJOUT LIGNE </button>
     <div id="clock">
         <span id="hours">20</span>
         <span id="dot">:</span>
