fix: client now send the type and city for his update, deleting useless vars in CourseService

--- a/src/main/resources/templates/coursesView.html
+++ b/src/main/resources/templates/coursesView.html
@@ -8,6 +8,7 @@
     <script src="../static/js/jquery.marquee.min.js" th:src="@{/js/jquery.marquee.min.js}"></script>
     <script src="../static/js/clock.js" th:src="@{/js/clock.js}"></script>
     <script src="../static/js/marquee.js" th:src="@{/js/marquee.js}"></script>
+    <script src="../static/js/communication.js" th:src="@{/js/communication.js}"></script>
 
 </head>
 <body onload="startTime()" th:classappend="${type == 'departs' ? 'departsBody' : 'arriveesBody'}">
