--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -135,3 +135,10 @@ td:nth-child(3) {
 .space {
     padding-right: 600px;
 }
+
+.retard{
+    font-size: 25px;
+    color: #ffe563;
+    white-space: nowrap;
+    margin-right: 200px;
+}
