Slider du démon

--- a/src/main/resources/templates/coursesView.html
+++ b/src/main/resources/templates/coursesView.html
@@ -8,13 +8,14 @@
     <script src="../static/js/jquery.marquee.min.js" th:src="@{/js/jquery.marquee.min.js}"></script>
     <script src="../static/js/clock.js" th:src="@{/js/clock.js}"></script>
     <script src="../static/js/marquee.js" th:src="@{/js/marquee.js}"></script>
+    <script src="../static/js/slider.js" th:src="@{/js/slider.js}"></script>
     <script src="../static/js/communication.js" th:src="@{/js/communication.js}"></script>
 
 </head>
 <body onload="startTime()" th:classappend="${type == 'departs' ? 'departsBody' : 'arriveesBody'}">
 
 <div class="content" th:fragment="resultsList" id="resultsList">
-    <table class="table" th:classappend="${type == 'departs' ? 'departs' : 'arrivees'}">
+    <table class="table" th:classappend="${type == 'departs' ? 'departs' : 'arrivees'}" id="trainsList">
         <tr th:each="course : ${courses}">
             <td><span class="numTrain" th:text="${course.numTrain}"></span></td>
             <td >
