--- a/src/main/resources/templates/coursesView.html
+++ b/src/main/resources/templates/coursesView.html
@@ -8,13 +8,12 @@
     <script src="../static/js/jquery.marquee.min.js" th:src="@{/js/jquery.marquee.min.js}"></script>
     <script src="../static/js/clock.js" th:src="@{/js/clock.js}"></script>
     <script src="../static/js/marquee.js" th:src="@{/js/marquee.js}"></script>
-    <script src="../static/js/slider.js" th:src="@{/js/slider.js}"></script>
     <script src="../static/js/communication.js" th:src="@{/js/communication.js}"></script>
 
 </head>
 <body onload="startTime()" th:classappend="${type == 'departs' ? 'departsBody' : 'arriveesBody'}">
 
-<div class="content" th:fragment="resultsList" id="resultsList">
+<div class="content" th:fragment="resultsList" id="container">
     <table class="table" th:classappend="${type == 'departs' ? 'departs' : 'arrivees'}" id="trainsList">
         <tr th:each="course : ${courses}">
             <td><span class="numTrain" th:text="${course.numTrain}"></span></td>
@@ -38,11 +37,11 @@
 </div>
 
 <div id="footer" th:classappend="${type == 'departs' ? 'departs' : 'arrivees'}">
-    <div class='marquee'>
-        Clic rabot pas problem oui ?<span class="space"></span>
-        Nous nous excusons d'avance pour les retards éventuels.<span class="space"></span>
-        Manger 5 fruits et 5 légumes par jour.<span class="space"></span>
-    </div>
+    <!--<div class='marquee'>-->
+        <!--Clic rabot pas problem oui ?<span class="space"></span>-->
+        <!--Nous nous excusons d'avance pour les retards éventuels.<span class="space"></span>-->
+        <!--Manger 5 fruits et 5 légumes par jour.<span class="space"></span>-->
+    <!--</div>-->
     <button> AJOUT LIGNE </button>
     <div id="clock">
         <span id="hours">20</span>
