feat: playing info sound when lateness

--- a/src/main/resources/templates/coursesView.html
+++ b/src/main/resources/templates/coursesView.html
@@ -42,7 +42,8 @@
         <!--Nous nous excusons d'avance pour les retards éventuels.<span class="space"></span>-->
         <!--Manger 5 fruits et 5 légumes par jour.<span class="space"></span>-->
     <!--</div>-->
-    <button> AJOUT LIGNE </button>
+    <button id="ajout"> AJOUT LIGNE </button>
+    <button id="retard"> AJOUT RETARD </button>
     <div id="clock">
         <span id="hours">20</span>
         <span id="dot">:</span>
