style: roboto font

--- a/src/main/resources/templates/coursesView.html
+++ b/src/main/resources/templates/coursesView.html
@@ -3,7 +3,7 @@
 <head>
     <title th:if="${type == 'departs'}" th:text="'Départs de ' + ${gare}" ></title>
     <title th:if="${type == 'arrivees'}" th:text="'Arrivées de ' + ${gare}"></title>
-    <!--<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="../static/css/styleCourses.css" th:href="@{/css/styleCourses.css}" />
     <script src="../static/js/jquery-3.3.1.min.js" th:src="@{/js/jquery-3.3.1.min.js}"></script>
     <script src="../static/js/jquery.marquee.min.js" th:src="@{/js/jquery.marquee.min.js}"></script>
